[package]
name = "bittorrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = "2.2"
urlencoding = "2.1"
rand = "0.8"
sha1 = "0.10.5"
hex = "0.4"
percent-encoding = "2.1.0"
